package rec.gui;

import "rec/gui/proto/Size.proto";

message HelpProto {
  optional Size caption_size = 1;
  optional Size body_size = 2;
};

